# FCED_DatabaseProject_FiresDB

./: .gitignore  ConnectionManager.py  DatabaseManager.py  GUI.py  README.md  dataframeplotter.py  droigdrogjdr.py  load_fires.py  main.py  menu.py  pyproject.toml
Data/: Registos_Incendios_SGIF_2021_2023.xlsx:Zone.Identifier
SQL_Scripts/: create.sql  insert.sql
