[tool.poetry]
name = "fced-datbaseproject-firesdb"
version = "0.1.0"
description = "Database FCED project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
psycopg = {extras = ["binary"], version = "^3.2.3"}
tabulate = "^0.9.0"
seaborn = "^0.13.2"
tqdm = "^4.66.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
